OD-15326 remove java 8 specific code
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@65798 fb2e276d-fae9-0310-b578-b71ac85840b9